# rust-playbook

./: .env.mysql  .gitignore  Cargo.toml  README.md  log4rs.yaml  test-post.sh
src/: main.rs
src/models/: config.rs  errors.rs  mod.rs  post.rs  schema.rs  user.rs
src/repositories/: mod.rs  post_repository.rs  user_repository.rs
src/repositories/mongodb/: mod.rs
src/repositories/mysql/: mod.rs  mysql_post_repository.rs  mysql_user_repository.rs  summary.sql
src/routes/: hello_route.rs  mod.rs  post_route.rs  user_route.rs
