[package]
name = "rust-practice"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "3"
actix-web-validator = "2.1.1"
dotenv = "0.15.0"
envy = "0.4.2"
lazy_static = "1.4.0"
serde = "1.0.127"
log = "0.4.14"
log4rs = "1.0.0"
derive_more = "0.99.16"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.0", features = ["chrono", "mysql", "r2d2"] }
r2d2-diesel = "1.0.0"
r2d2 = "0.8"
validator = { version = "0.12", features = ["derive"] }